right menu alignment fixed

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -1,5 +1,4 @@
 .navbar{
-    background: rgb(197, 199, 197);
     height: 50px;
     width: 100%;
     .logo{
